# personaplex-work

./: .gitignore  CREATE_POSES.md  deployment_trt_4090.md  test_text.py  test_whisper_feat.py
echomimic_v2/: README.md  align_image.py  download_pretrained_weights.sh  extract_musetalk.py  infer.py  infer_acc.py  run_interference.ipynb  watcher.py  watcher_old.py
echomimic_v2/configs/prompts/: animation.yaml  infer.yaml  infer_acc.yaml
echomimic_v2/src/models/: motion_module.py  mutual_self_attention.py  resnet.py  unet_3d.py  unet_3d_emo.py  wav_clip.py
echomimic_v2/src/models/dwpose/: dwpose_detector.py
echomimic_v2/src/models/whisper/: audio2feature.py  wav2vec_audio2feature.py
echomimic_v2/src/pipelines/: pipeline_echomimicv2.py  pipeline_echomimicv2_acc.py
personaplex/: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json
personaplex/.github/ISSUE_TEMPLATE/: question.yml
personaplex/assets/test/: prompt_service.txt
personaplex/client/: index.html  package-lock.json  package.json  tailwind.config.js
personaplex/client/src/: app.tsx  index.css
personaplex/client/src/components/Button/: Button.tsx
personaplex/client/src/components/Input/: Input.tsx
personaplex/client/src/decoder/: decoderWorker.ts
personaplex/client/src/pages/Conversation/: Conversation.tsx  MediaContext.ts  SocketContext.ts
personaplex/client/src/pages/Conversation/components/AudioVisualizer/: ClientVisualizer.tsx  ServerVisualizer.tsx
personaplex/client/src/pages/Conversation/components/ModelParams/: ModelParams.tsx
personaplex/client/src/pages/Conversation/components/ServerAudio/: ServerAudio.tsx  ServerAudioStats.tsx
personaplex/client/src/pages/Conversation/components/ServerInfo/: ServerInfo.tsx
personaplex/client/src/pages/Conversation/components/TextDisplay/: TextDisplay.tsx
personaplex/client/src/pages/Conversation/components/UserAudio/: UserAudio.tsx
personaplex/client/src/pages/Conversation/hooks/: useLocalStorage.ts  useModelParams.ts  useServerAudio.ts  useSocket.ts  useSystemTheme.ts  useUserAudio.ts
personaplex/client/src/pages/Queue/: Queue.tsx
personaplex/client/src/protocol/: types.ts
personaplex/moshi/: LICENSE.moshi  pyproject.toml  requirements.txt
personaplex/moshi/moshi/: server.py
personaplex/moshi/moshi/modules/: rope.py  transformer.py
web_app/: NEXT_STEP.md  README.md  README_FORCE_FLUSH.md  SETUP.md  app.py  app_backup.py  check_feat_stats.py  check_xformers.py  debug_pose_build.py  find_projection.py  index.html  infer_out.txt  inspect_engine.py  inspect_onnx.py  ipc_server.py  output.txt  output2.txt  output3.txt  output4.txt  output5.txt  pyproject.toml  test_build.py  test_exact_audio.py  test_manager_build.py  test_numpy_vs_str.py  test_prefetch.py  test_silence_padding.py  test_whisper_math.py  verify_engine.py  verify_flag.py  verify_unet_onnx.py
web_app/core/: audio.py  gpu.py  models.py  monitoring.py  pose.py  server.py  workers.py
web_app/core/trt/: builder.py  export_pose_encoder.py  export_ref_unet.py  export_unet.py  export_vae.py  manager.py  runtime.py
