[project]
name = "web-app"
version = "0.1.0"
description = "EchoMimic-v2 web app – browser audio → diffusion pipeline → browser video+audio"
requires-python = "==3.11.9"
dependencies = [
    "aiohttp>=3.9",
    "opencv-python-headless>=4.8",
    "diffusers==0.31.0",
    "omegaconf==2.3.0",
    "Pillow>=10.2.0,<10.3.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.1",
    "einops==0.8.0",
    "ffmpeg-python",
    "soundfile",
    "matplotlib",
    "tqdm",
    "safetensors",
    "openai-whisper==20250625",
    "whisperx==3.7.4",
    "librosa>=0.11.0",
    "nvidia-cublas-cu12 ; sys_platform == 'win32'",
    "nvidia-cudnn-cu12 ; sys_platform == 'win32'",
    # Note: Removed version pin from here so uv looks at sources instead
    "torch",
    "torchvision",
    "torchaudio",
    "xformers>=0.0.32.post2",
    "torchao",
    "triton-windows < 3.7; sys_platform == 'win32'",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
# Toggle this extra on RunPod to force Blackwell/5090 compatibility
blackwell = []

[project.scripts]
web-app = "web_app.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
no-build-isolation-package = ["torchao"]
prerelease = "allow"
package = true
# This limits uv's "thinking" to just x86_64 Linux (our container platform)
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# Block broken nightly ONNX builds
override-dependencies = [
    "transformers==4.40.0",
    "onnxruntime==1.20.1",
    "onnxruntime-gpu==1.20.1",
]

# CUDA 12.6 index for PyTorch
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# NOTE: Blackwell/cu128 nightly index removed for now — nightly torch >=2.11.0.dev
# is incompatible with whisperx's torch<2.9.dev0 constraint. Re-add once stable
# cu128 builds land or whisperx relaxes the upper bound.

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }
torchao = { git = "https://github.com/pytorch/ao.git" }

[tool.setuptools]
packages = ["web_app"]
package-dir = { "web_app" = "." }
